fix: separator visibility outside component

--- a/src/components/slider-comparator/image-comparison.css
+++ b/src/components/slider-comparator/image-comparison.css
@@ -1,6 +1,6 @@
 .ImageComparison {
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .ImageComparison-images {
@@ -75,4 +75,13 @@
   box-shadow: 0px 0px 0px 13px rgba(255, 255, 255, 0.4);
   transition: width 0.2s ease-out, height 0.2s ease-out,
     box-shadow 0.2s ease-out 0.1s;
+}
+
+.ImageComparison-infoPoints {
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
 }
